--- a/proj3.css
+++ b/proj3.css
@@ -60,7 +60,7 @@ body{
 .wrapper{
   width: 100%;
   height: 350px;
-  background: url(/images/bg.jpg);
+  background: url(bg.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
