--- a/proj3.css
+++ b/proj3.css
@@ -60,7 +60,7 @@ body{
 .wrapper{
   width: 100%;
   height: 350px;
-  background: url(bg.jpg);
+  background: url('bg.jpg');
   background-size: cover;
   background-position: center;
   position: relative;
@@ -239,7 +239,7 @@ body{
 }
 .about-content .third{
   width: 40%;
-  background: url("/images/bg2.jpg");
+  background: url("bg2.jpg");
   background-size: cover;
   background-position: top;
   border-radius: 4px;
