--- a/proj3.css
+++ b/proj3.css
@@ -281,7 +281,7 @@ body{
 .cars{
   width: 100%;
   height: 300px;
-  background: url("/images/cars.jpg");
+  background: url("cars.jpg");
   background-size: cover;
   background-position: center;
   margin-bottom: 20px;
