--- a/proj3.css
+++ b/proj3.css
@@ -239,7 +239,7 @@ body{
 }
 .about-content .third{
   width: 40%;
-  background: url("bg2.jpg");
+  background: url('bg2.jpg');
   background-size: cover;
   background-position: top;
   border-radius: 4px;
@@ -281,7 +281,7 @@ body{
 .cars{
   width: 100%;
   height: 300px;
-  background: url("cars.jpg");
+  background: url('cars.jpg');
   background-size: cover;
   background-position: center;
   margin-bottom: 20px;
