--- a/proj3.css
+++ b/proj3.css
@@ -354,7 +354,7 @@ footer .con1 #policy, .con1 #links{
   display: none;
 }
 /* media queries */
-@media only screen and (min-device-width: 360px) and (max-width: 640px) {
+@media only screen and (max-width: 600px) {
   .container{
     width: 100%;
   }
@@ -433,9 +433,34 @@ footer .con1 #policy, .con1 #links{
   }
 }
 
-@media screen and (orientation:landscape) and (min-device-width: 350px) and (max-width:767px) {
-   /* Input Styles */
-   body{
-   background-color: pink;
+@media only screen and (orientation: landscape) and (min-width: 768px) {
+  .container nav{
+    overflow: hidden;
+    position: relative;
+  }
+   .navlinks{
+     display: none;
+     transition: all 1s;
+   }
+   .navlinks li{
+     width: 100%;
+   }
+   .navlinks li:hover{
+     background: whitesmoke;
+   }
+   .header .navlinks li a{
+    padding: 12px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+   }
+   .header a.icon{
+     display: block;
+     position: absolute;
+     right: 0;
+     top: 0;
+     color: #0605de;
+     padding: 20px;
+     font-size: 25px;
    }
 }
